# instagram-server-django

./: pyproject.toml
common/: models.py
config/: settings.py  urls.py
feeds/: admin.py  models.py  serializers.py  urls.py  views.py
feeds/migrations/: 0001_initial.py  0002_initial.py  0003_alter_feed_user.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py  0003_alter_review_feed_alter_review_user.py  0004_review_likesnum.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
